--- a/index.html
+++ b/index.html
@@ -10,5 +10,27 @@
       Discover hidden places in the world around you
     </h1>
     <a href="">Download Excursion (Coming soon!)</a>
+  <p>
+    <video>
+      <source src="resources/images/excursion.mp4" type="mp4/video"> Not avilable
+    </video>
+  </p>
+    <h2>
+      Your personal travel guide
+    </h2>
+    <h3>
+      Excursion remembers places you like, and recommends new points of interest around you.
+    </h3>
+    <p>
+    <img src="resources/images/camp.jpg"/>
+  </p>
+  <p>
+    <img src="resources/images/phone.png"/>
+  </p>
+    <h2>
+      Coming Soon for iPhone and Android
+    </h2>
+    <a href="">Download Excursion (Coming soon!)</a>
+    <h5>© Excursion</h5>
   </body>
 </html>
